<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">List Fragment</string>
    <string name="add_fragment_label">Add Fragment</string>
    <string name="Temp">%s"\u00B0"</string>
    <string name="rain_percentage">%s %% Rain</string>
    <string name="city_name">City Name</string>
    <string name="zip_code">Zip Code</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="menu_refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="weather_condition_icon_content_description">Weather Condition Icon</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="today">Today</string>
    <string name="USA">United States of America</string>
    <string name="UK">United Kingdom</string>
    <string name="search_for_places">Search for Places...</string>
    <string name="twelve_hour">12 Hour Clock Format</string>
    <string name="twenty_four_hour">24 Hour Clock Format</string>
    <string name="Sunny">Sunny</string>
    <string name="USA_Acronym">USA</string>
    <string name="UK_Acronym">UK</string>
    <string name="show_current_condition_color">Show Condition Colors</string>
    <string name="show_precipitation_notifications">Show Precipitation Notifications?</string>
    <string name="show_local_forecast">Show Local Forecast Notifications?</string>
    <string name="USA2">USA United States of America</string>
    <string name="default_notification_channel_id">Weather Default Channel</string>
    <string name="precipitation_notification">Expect rain soon</string>
    <string name="precipitation_notification_channel_id" translatable="false">precipitation_channel</string>
    <string name="forecast_notification_channel_id" translatable="false">forecast_channel</string>
    <string name="precipitation_notification_channel_name" translatable="true">Precipitation</string>
    <string name="precipitation_notification_channel_description">Precipitation Notifications</string>
    <string name="local_notification_channel_description">Local Forecast Notification</string>
    <string name="snooze">Snooze</string>
    <string name="notification_title">Precipitation Alert</string>
    <string name="forecast_title">Local Forecast</string>
    <string name="notification_text">Expect Rain Soon</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_permission_required">Notification permission is required, Please allow notification permission from settings</string>
    <string name="notification_permission_dialog">Notification permission is required to show notifications</string>
    <string name="notification_permission_dialog_title">Notification Permission</string>
    <string name="location_permission_required">Location permission is required, Please allow location permission from settings</string>
    <string name="background_location_permission_required">Weather Tracker collects location data to enable local forecast notifications,
        even when the app is closed or not in use. Please allow background location in settings.</string>
    <string name="location_permission_dialog">Location permission is required to show notifications</string>
    <string name="location_permission_dialog_title">Location Permission</string>
    <string name="background_location_permission_dialog_title">Background Location Permission</string>
    <string name="forecast_notification_channel_name">Local Forecast Notifications</string>
    <string name="location_services_required_dialog_title">Location Services Required</string>
    <string name="location_services_required_dialog">Please enable location services in settings</string>
    <string name="show_notifications">show_notifications</string>
    <string name="precipitation_notification_locations">Precipitation Notification Locations</string>
    <string name="choose_precip_locations">Choose which locations to show precipitation notifications</string>
    <string name="get_local_forecast">Get daily notifications for local forecast</string>
    <string name="show_local_forecast_title">Show Local Forecast?</string>
    <string name="show_precip_title">Show Precipitation Notifications?</string>
</resources>
