<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">



    <CheckBoxPreference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:defaultValue="true"
        app:enabled="true"
        app:key="@string/show_notifications"
        app:title="Show Notifications?"
        />

    <CheckBoxPreference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:defaultValue="false"
        app:enabled="true"
        app:key="@string/show_local_forecast"
        app:title="@string/show_local_forecast_title"
        app:summary="@string/get_local_forecast"
        app:dependency="show_notifications"
        />

    <CheckBoxPreference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:defaultValue="true"
        app:enabled="true"
        app:key="@string/show_precipitation_notifications"
        app:title="@string/show_precip_title"
        app:dependency="show_notifications"
       />

    <com.brian.weather.ui.settings.LocationListPreference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:dialogTitle="Locations"
        app:defaultValue="@array/empty_array"
        app:key="locations"
        app:title="@string/precipitation_notification_locations"
        app:summary="@string/choose_precip_locations"
        app:dependency="@string/show_precipitation_notifications"/>





</PreferenceScreen>