<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forecast"
            type="com.example.weather.model.Days" />

        <variable
            name="viewModel"
            type="com.example.weather.ui.viewmodel.WeatherListViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <!-- In the above cardview widget cardelevation property will give elevation to your card view
            card corner radius will provide radius to your card view card background color will give
            background color to your card view card max elevation will give the cardview maximum
            elevation card prevent corner overlap will add padding to CardView on v20 and before to
            prevent intersections between the Card content and rounded corners. Card use compact padding
            will add padding in API v21+ as well to have the same measurements with previous versions -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <!--TODO This is still pulling from the database, should pull from the repo-->
                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{forecast.date}"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Date" />

                <TextView
                    android:id="@+id/weather_for_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{forecast.day.condition.text}"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date"
                    tools:text="Weather for Day" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="?attr/dividerHorizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weather_for_day" />

                <ImageView
                    android:id="@+id/conditionIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/weather_condition_icon_content_description"
                    app:imageUrl="@{forecast.day.condition.icon}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="96dp"
                    android:layout_marginBottom="16dp"
                    android:text="@{@string/Temp(String.valueOf(forecast.day.mintemp_f))}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/conditionIcon"
                    tools:text="Low" />

                <TextView
                    android:id="@+id/tempHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:text="@{@string/Temp(String.valueOf(forecast.day.maxtemp_f))}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/conditionIcon"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="High" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="112dp"
                    android:text="@string/low"
                    app:layout_constraintEnd_toStartOf="@+id/conditionIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="44dp"
                    android:text="@string/high"
                    app:layout_constraintEnd_toStartOf="@+id/conditionIcon"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>
